--- a/assets/index.css
+++ b/assets/index.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Rubik;
+  font-family: Rubik, Arial, Helvetica, sans-serif;
 }
 
 @font-face {
